# poetry_overspecify_deps_demo

./: .gitignore  README.md  noxfile.py  pyproject.toml  shell.nix
