[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2"
setuptools = [
    # v68.1.0 drops support for Python v3.7:
    {version = ">=68.0.0", python = ">=3.8"},
    {version = ">=68.0.0,<68.1.0", python = "<3.8"},
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
